Collapse Icon Color + Search Focus + Heading Fixes

--- a/SCSS/ITS Theme/Custom CSS/_CCSS-SlRvb - Headings.scss
+++ b/SCSS/ITS Theme/Custom CSS/_CCSS-SlRvb - Headings.scss
@@ -1,5 +1,7 @@
 /*--Headings--*/
-h1, h2, h3, h4, h5, h6, .cm-s-obsidian .HyperMD-header {
+h1, h2, h3, h4, h5, h6,
+.markdown-rendered :is(h1, h2, h3, h4, h5, h6),
+.cm-s-obsidian .HyperMD-header {
     font-weight: var(--f-w-h);
     font-family: var(--font);
     color: var(--headers);
