--- a/SCSS/ITS Theme/Plugin Core/_P-Core - Search.scss
+++ b/SCSS/ITS Theme/Plugin Core/_P-Core - Search.scss
@@ -89,6 +89,20 @@ body .suggestion {
     color: var(--soft-text);
 }
 
+.workspace-leaf.mod-active .search-result.has-focus .tree-item-self, 
+.workspace-leaf.mod-active .search-result-file-match.has-focus {
+    border: 0;
+    border-radius: var(--radius);
+    background-color: var(--text-highlight-bg);
+    box-shadow: inset 0 0 0 1px var(--interactive-accent);
+
+    &:after { background-color: var(--interactive-accent); }
+}
+.workspace-leaf-content[data-type='search'] .search-result-file-matches {
+    padding-left: 0;
+}
+
+
 .search-result-file-match {
     margin: auto;
     width: auto;
